--- a/Main.html
+++ b/Main.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello!</h1>
-    <h2>testing 1</h2>
+    the main home page 
 </body>
 </html>
