--- a/Shop.html
+++ b/Shop.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Sports shop</title>
     <link rel="stylesheet" href="nav_bar.css">
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="Main.html">Home</a>
-        <a  href="Shop.html">Shop</a>
+        <a href="Main.html">Home</a>
+        <a class="active" href="Shop.html">Shop</a>
         <a href="#news">Query Form</a>
         <a href="#contact">Footy Quiz</a>
-        <a href="#about">About</a>
+        <a href="#about">Site map</a>
       </div>
-
-      <h1>Home</h1>
 </body>
 </html>
