--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello!</h1>
-    <h2>Hello</h2>
-    <h3>hi</h3>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Comments</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Quiz</a></li>
+            <li><a href="#">Site Map</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+    </nav>
+    <div class="menugrid">
+        <main>
+            <div class="option1">1</div>
+            <div class="option2">2</div>
+            <div class="option3">3</div>
+            <div class="option4">4</div>
+        </main> 
+    </div>
+      
 </body>
 </html>
