--- a/Shop.html
+++ b/Shop.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="Main.html">Home</a>
-        <a class="active" href="Shop.html">Shop</a>
-        <a href="#news">Query Form</a>
-        <a href="#contact">Footy Quiz</a>
-        <a href="#about">Site map</a>
-      </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Comments</a></li>
+                <li><a class="active" href="#">Shop</a></li>
+                <li><a href="#">Quiz</a></li>
+                <li><a href="#">Site Map</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </nav>
+    </div>
+    
 </body>
 </html>
