--- a/Main.html
+++ b/Main.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="Main.html">Home</a>
-        <a  href="Shop.html">Shop</a>
-        <a href="#news">Query Form</a>
-        <a href="#contact">Footy Quiz</a>
-        <a href="#about">About</a>
-      </div>
-
+        <nav>
+            <ul>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#">Comments</a></li>
+                <li><a  href="Shop.html">Shop</a></li>
+                <li><a href="#">Quiz</a></li>
+                <li><a href="#">Site Map</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </nav>
+    </div>
       <h1>Home</h1>
 </body>
 </html>
