--- a/Shop.html
+++ b/Shop.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports shop</title>
     <link rel="stylesheet" href="nav_bar.css">
+    <link rel="stylesheet" href="shop.css">
 </head>
 <body>
     <div class="topnav">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="Main.html">Home</a></li>
                 <li><a href="#">Comments</a></li>
                 <li><a class="active" href="#">Shop</a></li>
                 <li><a href="#">Quiz</a></li>
@@ -19,6 +20,41 @@
             </ul>
         </nav>
     </div>
-    
+
+    <div class="products">
+        <img class="item-image" id="boot" src="Cw photos\footwear-7042722_640.jpg" alt="no img">
+        <div class="item-details">
+            <h2 class="item-title">Football Boots</h2>
+            <p class="item-price">$10.99</p>
+        </div>
+    </div>
+
+
+    <div class="products">
+        <img class="item-image" id="boot" src="Cw photos\goalkeeper-3090016_1280.jpg" alt="no img">
+        <div class="item-details">
+            <h2 class="item-title">Keeper Glove</h2>
+            <p class="item-price">$13.99</p>
+        </div>
+    </div>
+
+
+    <div class="products">
+        <img class="item-image" id="boot" src="Cw photos\football-488714_640.jpg" alt="no img">
+        <div class="item-details">
+            <h2 class="item-title">Football</h2>
+            <p class="item-price">$50.99</p>
+        </div>
+    </div>
+
+    <div class="products">
+        <img class="item-image" id="boot" src="Cw photos\shin pads.jpg" alt="no img">
+        <div class="item-details">
+            <h2 class="item-title">Shin pads</h2>
+            <p class="item-price">$8.99</p>
+        </div>
+    </div>
+
+
 </body>
 </html>
