--- a/Group_Memeber_Names.html
+++ b/Group_Memeber_Names.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://kit.fontawesome.com/2a81a1214a.js" crossorigin="anonymous"></script>
 <title>Group Members</title>
 <style>
-h1 {
-  text-align: center;
-  font-size: 3em;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  body {
+  background-image: url('https://img.freepik.com/free-vector/abstract-digital-grid-vector-black-background_53876-111550.jpg?w=740&t=st=1689655105~exp=1689655705~hmac=f827749567b1ea33d17b43b00369fb82aef6d4d4397d4f3bdd3089b376fd511c');
+  background-size: cover;
+  
 }
 
-p {
+h1 {
   text-align: center;
-  font-size: 16px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #c5d2fc;
+  border: 1px solid #c2def8;
+  border-radius: 10px;
+  padding: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
 }
+
 
 ul {
   list-style-type: none;
   margin: 0;
-  padding:0;
+  padding:0px;
+ 
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  border: 1px solid #c2def8;
+  border-radius: 10px;
 
 }
 
@@ -29,8 +40,13 @@ li {
   display: inline-block;
   margin-right: 10px;
   font-size: 2em;
-  padding: 10px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 20px;
+  font-family:cursive;
+  color: #c2def8;
+  align-self: flex-start;
+  padding-left: 60px;
+
+
 }
 
 li:last-child {
@@ -40,23 +56,23 @@ li:last-child {
 .name-container {
   width: 400px;
   margin: 0 auto;
+  padding-top: 40px;
+  
 }
 </style>
 </head>
 <body>
 <div class="name-container">
-<h1>Group Members</h1>
+<h1><i class="fa-sharp fa-solid fa-people-group " style="color: #09b7ce;"> </i> Group Members</h1>
+
 <ul>
-<li>Zaid Nilawfer</li>
-<li>Abdhul Basith</li>
-<li>Hanees Haseef</li>
-<li>Rikas Ilamdeeen</li>
+<li><i class="fa-solid fa-person-rifle fa-fade fa-sm" style="color: #fa0909;"></i> Zaid Nilawfer</li>
+<li><i class="fa-solid fa-person-rifle fa-fade fa-sm" style="color: #053ef8;"></i> Abdhul Basith</li>
+<li><i class="fa-solid fa-person-rifle fa-fade fa-sm" style="color: #c7ec23;"></i> Hanees Haseef</li>
+<li><i class="fa-solid fa-person-rifle fa-fade fa-sm" style="color: #035f03;"></i> Rikas Ilamdeeen</li>
 </ul>
 </div>
-<script>
-var timer = setTimeout(function() {
-window.location.href = "Main.html";
-}, 4000);
-</script>
+
+
 </body>
 </html>
