second commit with updated files

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student details</title>
-    <link rel="stylesheet" href="css/aboutUs.css" />
+    <link rel="stylesheet" href="/css/aboutUs.css" />
 
-    <script src="Js/aboutUs.js"></script>
+    <script src="/Javascript/aboutUs.js"></script>
   </head>
   <body>
+  <main>
     <h1>Student Details</h1>
     <h2>About Us - Hover over the images for details!</h2>
     <section class="sections">
       <div class="students">
         <div class="studentImage">
         <img
-          src="img/model-2911332_1280.jpg"
+          src="/img/model-2911332_1280.jpg"
           alt="Zaid's image"
           id="image01"
           onmouseover="displayStudnetDetails('image01' , 'student01','Zaid')"
@@ -33,7 +34,7 @@
       
         <div class="students">
           <img
-            src="img/model-2911332_1280.jpg"
+            src="/img/model-2911332_1280.jpg"
             alt="Baisth's image"
             id="image02"
             onmouseover="displayStudnetDetails('image02' , 'student02','Baisth')"
@@ -47,7 +48,7 @@
     <section class="sections">
       <div class="students">
         <img
-          src="img/model-2911332_1280.jpg"
+          src="/img/model-2911332_1280.jpg"
           alt="Haseef's image"
           id="image03"
           onmouseover="displayStudnetDetails('image03' , 'student03','Haseef')"
@@ -61,7 +62,7 @@
     <section class="sections">
       <div class="students">
         <img
-          src="img/model-2911332_1280.jpg"
+          src="/img/model-2911332_1280.jpg"
           alt="Rikas's image"
           id="image04"
           onmouseover="displayStudnetDetails('image04' , 'student04', 'Rikas')"
@@ -72,6 +73,7 @@
         </div>
     </div>
     </section>
+  </main>
     
   </body>
 </html>
