--- a/thankyoumsg.html
+++ b/thankyoumsg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-comments.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -17,14 +17,9 @@
             <li><a href="#">About Us</a></li>
         </ul>
     </nav>
-    <div class="menugrid">
-        <main>
-            <div class="option1">1</div>
-            <div class="option2">2</div>
-            <div class="option3">3</div>
-            <div class="option4">4</div>
-        </main> 
+    <div class="thankYou">
+        <p class="subject">Thank You!</p>
+        <div class="questionBox">Thank you for taking the time to give your feedback on your experience today</div>
     </div>
-      
 </body>
 </html>
