--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -27,7 +27,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Comments</a></li>
           <li><a href="#">Shop</a></li>
-          <li><a href="/html/quiz.html">Quiz</a></li>
+          <li><a href="../html/quiz.html">Quiz</a></li>
           <li><a href="#">Site Map</a></li>
           <li><a href="../html/AboutUs.html">About Us</a></li>
         </ul>
