--- a/html/home.html
+++ b/html/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/navbar.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img src="Images/football.png" alt="alter">
+            <img src="../Images/football.png" alt="alter">
             <ul>
                 <li><a href="home.html" class="active" > Home</a></li>
                 <li><a href="comments.html" > Comments</a></li>
@@ -24,23 +24,16 @@
     </header>
     
     <div class="column">
-        <div class="option1"><a href="#">history</a></div>
-        <div class="option2"><a href="#">teams and Clubs</a></div>
+        <button class="option1">History</button>
+        <button class="option2">Teams and Clubs</button>
     </div>
     <div class="column">
-        <div class="option3"><a href="#">Fans and culture</a></div>
-        <div class="option4"><a href="#">Legends</a></div>
+        <button class="option3">Fans and culture</button>
+        <button class="option4">Legends</button>
     </div>
 
-    <!-- <div class="menugrid">
-        <main>
-            <div class="option1"><a href="#">history</a></div>
-            <div class="option2"><a href="#">teams and Clubs</a></div>
-            <div class="option3"><a href="#">Fans and culture</a></div>
-            <div class="option4"><a href="#">Legends</a></div>
-        </main> 
-    </div> -->
-    
+
     <footer>page by <a href="aboutAbdhulbasith.html">Abdhulbasith</a></footer>
 </body>
 </html>
+
