--- a/html/history.html
+++ b/html/history.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="../Images/football.png" alt="alter">
+            <img src="../images/football.png" alt="alter">
             <ul>
                 <li><a href="home.html" class="active" > Home</a></li>
                 <li><a href="comments.html" > Comments</a></li>
