--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img src="../Images/football.png" alt="alter">
+            <img src="../images/football.png" alt="alter">
             <ul>
                 <li><a href="home.html" class="active" > Home</a></li>
                 <li><a href="comments.html" > Comments</a></li>
@@ -32,8 +32,7 @@
         <button class="option4">Legends</button>
     </div>
 
-
-    <footer>page by <a href="aboutAbdhulbasith.html">Abdhulbasith</a></footer>
+    <footer>page by <a href="AB-details.html">Abdhulbasith</a></footer>
 </body>
 </html>
 
