--- a/html/comments.html
+++ b/html/comments.html
@@ -11,7 +11,7 @@
 <body>    
     <header>
         <nav>
-            <img src="../Images/football.png" alt="alter">
+            <img src="../images/football.png" alt="alter">
             <ul>
                 <li><a href="home.html"> Home</a></li>
                 <li><a href="comments.html" class="active"> Comments</a></li>
