--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitemap</title>
-    <link rel="stylesheet" href="css\sitemap.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/sitemap.css">
 </head>
 <body>
-    <h1 id="heading">Football Trivia</h1>
-    <div class="topnav">
-        <nav>
-            <ul>
-                <li><a class="active" href="Main.html">Home</a></li>
-                <li><a href="comments.html">Comments</a></li>
-                <li><a  href="Shop.html">Shop</a></li>
-                <li><a href="html/quiz.html">Quiz</a></li>
-                <li><a href="sitemap.html">Site Map</a></li>
-                <li><a href="html/aboutUs.html">About Us</a></li>
-            </ul>
-        </nav>
-    </div>
+    <section>
+        <header>
+            <nav>
+                <img src="../images/football.png" alt="alter">
+                <ul>
+                    <li><a href="home.html" >Home</a></li>
+                    <li><a href="comments.html" >Comments</a></li>
+                    <li><a href="Shop.html" >Shop</a></li>
+                    <li><a href="quiz.html" >Quiz</a></li>
+                    <li><a href="siteMap.html" class="active" >Site Map</a></li>
+                    <li><a href="gallery.html" >Gallery</a></li>
+                    <li><a href="aboutUs.html" >About Us</a></li>
+                </ul>
+            </nav>
+        </header>
+    </section>
 
     <section>
         <h1 id="site">Site Map</h1>
@@ -50,7 +54,7 @@
                 <g id="shop">
                     <a href="Shop.html">
                         <rect x="288" y="402.02791" width="160" height="70" rx="20" ry="20"/>
-                        <text x="341" y="445" stroke-width="0"  text-anchor="start" xml:space="preserve">Shop</text>
+                        <text x="336" y="445" stroke-width="0"  text-anchor="start" xml:space="preserve">Shop</text>
                     </a>
                 </g>
                 <g id="quiz">
@@ -59,22 +63,28 @@
                         <text x="605" y="445" text-anchor="start" xml:space="preserve">Quiz</text>
                     </a>
                 </g>
-                <g id="gallery">
-                    <a href="#">
-                        <rect x="824" y="402" width="160" height="70" rx="20" ry="20"/>
-                        <text x="860" y="445" text-anchor="start" xml:space="preserve">Gallery</text>
-                    </a>
-                </g>
                 <g id="sitemap">
                     <a href="sitemap.html">
+                        <rect x="824" y="402" width="160" height="70" rx="20" ry="20"/>
+                        <text x="860" y="445" text-anchor="start" xml:space="preserve">Site Map</text>
+                    </a>
+                </g>
+                <g id="gallery">
+                    <a href="gallery.html">
                         <rect x="1092" y="402.02791" width="160" height="70" rx="20" ry="20"/>
-                        <text x="1125" y="445" text-anchor="start" xml:space="preserve">Site Map</text>
+                        <text x="1133" y="445" text-anchor="start" xml:space="preserve">Gallery</text>
                     </a>
                 </g>
                 <g id="about">
                     <a href="html/aboutUs.html">
                         <rect x="1310" y="402" width="160" height="70" stroke-width="3" rx="20" ry="20"/>
                         <text x="1340" y="445" text-anchor="start" xml:space="preserve">About Us</text>
+                    </a>
+                </g>
+                <g id="pageEditor">
+                    <a href="pageEditor.html">
+                        <rect x="0" y="636" width="310" height="45"/>
+                        <text x="13" y="664" stroke-width="0" text-anchor="start" xml:space="preserve">Page Editor: Rikas Ilamdeen (student 4)</text>
                     </a>
                 </g>
             </svg>
