--- a/html/content-page-zaid.html
+++ b/html/content-page-zaid.html
@@ -19,9 +19,12 @@
                 <p class="hero-subtitle">"
                     Football fans are a diverse group of people who come from all walks of life.<br>
                     They bring their own unique cultures and traditions to the game, which makes football fan culture so vibrant and exciting.<br>
-                    Fans sing songs, wear jerseys, and travel to away games to show their support for their team. They also have a strong sense of community, and they often bond over their shared love of the game."
+                    Fans sing songs, wear jerseys, and travel to away games to show their support for their team.<br>
+                     They also have a strong sense of community, and they often bond over their shared love of the game."
                 </p>
-                <video autoplay loop muted src="..\assets\adventureIntro.mp4"></video> 
+                <video autoplay loop muted playsinline class="slow-motion-video">
+                    <source src="../videos/backvid2.mp4" type="video/mp4">
+                </video> 
             </div>
         </section>
     <!-- End Hero -->
@@ -66,10 +69,8 @@
                 <video class="descIntro" loop muted src="..\assets\beachSurf.mp4"></video>
                 <div class="video-description">
                     <h3>Europe</h3>
-                    <p>Discover the exciting sport of beach surfing, where the sun, sand,
-                         and sea combine to produce a once-in-a-lifetime experience.
-                          Enjoy the rush of catching the ideal wave as it surges toward 
-                        the shore and carries you along on your dependable surfboard.</p>
+                    <p>Football fan culture in Europe is vibrant and ever-changing. 
+                    Fans come from all walks of life and bring their unique cultures and traditions to the game.</p>
                     <a href="#beachsurf">Read More</a>
                 </div>  
             </div>
@@ -77,11 +78,10 @@
             <div class="description-item">
                 <video class="descIntro" loop muted src="..\assets\mountainClimb.mp4"></video>
                 <div class="video-description">
-                    <h3>Mountain Climb</h3>
-                    <p>Explore the thrilling world of scaling new heights by setting out
-                         on awe-inspiring mountain climbing expedition. As soon as you step 
-                         onto the trail, you join a long-standing tradition and enter a space 
-                         where the spirit of man and the forces of nature coexist.</p>
+                    <h3>Africa</h3>
+                    <p>Football is a cultural phenomenon in Africa, and fan culture is a big part of that.
+                     Fans come from all walks of life and from all over the continent,
+                      and they bring their own unique cultures and traditions to the game..</p>
                     <a href="#mountainclimb">Read More</a>
                 </div>  
             </div>
@@ -89,11 +89,11 @@
             <div class="description-item">
                 <video class="descIntro" loop muted src="..\assets\mountainCycling.mp4"></video>
                 <div class="video-description">
-                    <h3>Mountain Cycling</h3>
-                    <p>Set out on a thrilling mountain biking expedition where challenging
-                         terrain and breathtaking scenery combine to create the ultimate 
-                         biking experience. Feel the rush as you pedal through difficult 
-                         trails, overcoming difficult ascents and exhilarating descents.</p>
+                    <h3>Middle east</h3>
+                    <p>  Football is the most popular sport in the Middle East, 
+                        and fan culture is a vibrant and important part of the game. 
+                        Fans come from all walks of life and from all over the region,
+                         and they bring their own unique cultures and traditions to the game..</p>
                     <a href="#mountaincycling">Read More</a>
                 </div>  
             </div>
@@ -101,12 +101,10 @@
             <div class="description-item">
                 <video class="descIntro" loop muted src="..\assets\skyDive.mp4"></video>
                 <div class="video-description">
-                    <h3>Sky Diving</h3>
-                    <p>Skydiving is the ultimate adrenaline rush, a breath-taking 
-                        adventure that will carry you to new heights. When the plane
-                         door opens, a rush of wind fills the cabin as anticipation 
-                         grows from the moment you step inside. You leap into the vast
-                          sky while feeling your nerves tingle.
+                    <h3>South America</h3>
+                    <p>Football fans in South America are some of the most passionate fans in the world. They travel to away games,
+                        sing songs, and wear jerseys to show their support for their team.
+                        They also have a strong sense of community, and they often bond over their shared love of the game.
                     </p>
                     <a href="#skydive">Read More</a>
                 </div>  
@@ -116,18 +114,14 @@
         <div class="readmore-content">
             <!-- 01 -->
             <div class="readmore-item">
-                <h3 id="beachsurf">Beach Surf</h3>
+                <h3 id="beachsurf">Europe</h3>
                 <p>
-                    An exhilarating sense of freedom and connection with nature is 
-                    evoked by the rhythmic dance between the surfer and ocean as 
-                    they ride the strong currents. The beach serves as your canvas,
-                     and the waves as your medium, whether you're a seasoned wave warrior 
-                     or a beginner looking to master the surf.
-                     <br><br>
-                     Beach surfing combines sport, relaxation, and pure excitement into 
-                     a captivating tapestry of coastal delight. Accept the challenge, 
-                     learn from wipeouts, and celebrate triumphant rides. As you create
-                      enduring memories and depart, allow the salt spray to kiss your face.
+                      Football fan culture in Europe is vibrant and ever-changing.
+                    Fans come from all walks of life and bring their unique cultures and traditions to the game.
+                    Some of the most common cultural aspects of football fan culture in Europe include singing songs, wearing jerseys, and traveling to away games. <br>Fans also often gather to watch matches together, either at home or at a pub. This is a great way to share the excitement of the game with other fans and to create a sense of community.
+                    Football is more than just a sport in Europe. It is a way of life for many people. People gather to watch football matches, and the sport is often used to promote social and political messages.
+                    The passion of football fans in Europe is unmatched. <br>They are some of the most passionate fans in the world, and they travel to away games, sing songs, and wear jerseys to show their support for their team. They also have a strong sense of community, and they often bond over their shared love of the game.
+                    Football fan culture in Europe is a unique and special part of the game. It is a way for fans to express their passion for the sport and to connect with other fans from all over the continent.
                 </p>
                 <div class="images">
                     <img src="..\assets\beachsurf1.jpg" alt="beachsurf1">
@@ -137,18 +131,23 @@
             </div>
             <!-- 02 -->
             <div class="readmore-item">
-                <h3 id="mountainclimb">Mountain Climb</h3>
+                <h3 id="mountainclimb">Africa</h3>
                 <p>
-                    Each step is a test of your physical and mental stamina as you navigate through
-                     dense forests, glacier fields, and steep ridges, feeling the raw power 
-                     of the mountains as you climb rocky terrains.
+                    Football is a cultural phenomenon in Africa, and fan culture is a big part of that.
+                     Fans come from all walks of life and from all over the continent,
+                      and they bring their own unique cultures and traditions to the game.
                      <br><br>
-                     A profound journey of self-discovery and resiliency is mountain climbing. 
-                     It tests your limits and pushes you farther than you ever imagined.
-                      A strong connection to the natural world and its unpredictability
-                       is fostered by the constantly changing weather conditions, which 
-                       call for flexibility and quick thinking.
-                    <br><br>
+                     Some of the most common cultural aspects of football fan culture in Africa include singing songs,
+                      wearing jerseys, and traveling to away games. Fans also gather to watch matches together,
+                      either at home or at a pub. Football is more than just a sport in Africa; it is a way of life for many people.
+                    The passion of football fans in Africa is unmatched, and they are some of the most passionate fans in the world.
+                    In some countries, football is used to promote social and political messages. For example, in Ghana, fans are known for their "jama" songs,
+                    which are often improvised and sung in local languages. 
+                    These songs can be used to express political or social commentary,
+                     and they are a way for fans to connect with their community and to celebrate their culture.
+                    Football fan culture in Africa is a rich and diverse part of the game. 
+                    It is a way for fans to express their passion for the sport, to connect with their community, 
+                    and to celebrate their culture.
                     The world beneath you opens up as you move along, revealing breathtaking
 
                 </p>
@@ -160,19 +159,22 @@
             </div>
             <!-- 03 -->
             <div class="readmore-item">
-                <h3 id="mountaincycling">Mountain Cycling</h3>
+                <h3 id="mountaincycling">Middle East</h3>
                 <p>
-                    Mountain biking offers an immersive journey through dense forests, 
-                    rocky paths, and majestic vistas. It is the ideal fusion of sport 
-                    and nature.You move forward with each pedal stroke as the untamed 
-                    wilderness' unadulterated beauty surrounds you. Every turn deepens
-                     the connection to nature, reminding you of your position in this 
-                     breathtaking setting.
+                    Football is the most popular sport in the Middle East, and fan culture is a vibrant and important part of the game.
+                     Fans come from all walks of life and from all over the region, 
+                     and they bring their own unique cultures and traditions to the game.
                      <br><br>
-                    Mountain biking offers an energising escape from the everyday, 
-                    whether you're an experienced mountain biker looking for new 
-                    challenges or a beginner eager to explore. Embrace the rush of
-                     adrenaline as you overcome obstacles and manoeuvre through the turns
+                     Football is more than just a sport in the Middle East. It is a way of life for many people. The passion of football fans in the Middle East is unmatched, and they are some of the most passionate fans in the world.
+                     Some of the most common cultural aspects of football fan culture in the Middle East include singing songs, wearing jerseys, and traveling to away games. Fans also gather to watch matches together, either at home or at a pub.
+                     Football fan culture in the Middle East is a rich and diverse part of the game. It is a way for fans to express their passion for the sport, to connect with their community, and to celebrate their culture.
+                     Here are some specific examples of football fan culture in the Middle East: <br><br>
+                     <ul>
+                        <li>In Iran, fans are known for their passionate support of their teams, and they often travel long distances to watch them play.</li><br>
+                        <li>In Saudi Arabia, football is a symbol of national pride, and fans often wear the colors of the national team with pride.</li><br>
+                        <li>In Qatar, the World Cup in 2022 is a major event, and fans are eagerly anticipating the tournament.</li><br>
+                    </ul>
+                     
                 </p>
                 <div class="images">
                     <img src="..\assets\mountaincycling1.jpg" alt="mountaincycling1">
@@ -182,17 +184,21 @@
             </div>
             <!-- 04 -->
             <div class="readmore-item">
-                <h3 id="skydive">Sky Dive</h3>
+                <h3 id="skydive">South America</h3>
                 <p>
-                    Time seems to stop during the thrilling freefall, and you experience
-                     the pure thrill of freedom as your senses are sharpened. As you fall 
-                     towards the ground, the wind rushes past you as adrenaline floods your body.
-                     <br><br>
-                    The parachute then opens at precisely the right time, and the world changes.
-                     You soar through the air like a bird in flight, taking in the breathtaking
-                      views from above and the peace of the moment.An exhilarating sense of 
-                      freedom and connection with nature is 
-                </p>
+                    Football fans in South America are some of the most passionate fans in the world. They travel to away games,
+                     sing songs, and wear jerseys to show their support for their team.
+                     They also have a strong sense of community, and they often bond over their shared love of the game.<br>
+                
+                     The culture of football in South America is constantly evolving. New trends and traditions are emerging all the time, and the game is becoming more globalized. 
+                     However, the passion of football fans remains the same, and it is this passion that makes football such a special sport in South America.
+                     Here are some of the most common cultural aspects of football fan culture in South America:<br><br>
+                     <ul>
+                        <li>Singing songs. Football fans in South America are known for their singing, and they often have a repertoire of songs that they sing at matches. These songs can be about the team, the city, or even just about football in general.</li><br>
+                        <li>Wearing jerseys. Wearing jerseys is a way for fans to show their support for their team. Jerseys are often decorated with the team's logo and colors, and they can be a source of pride for fans.</li><br>
+                        <li>Travelling to away games. Some fans are so passionate about their team that they will travel to away games to watch them play. This can be a great way to experience the culture of other cities and to meet other fans from around the continent.</li><br>
+                    </ul>
+                    </p>
                 <div class="images">
                     <img src="..\assets\skydive1.jpg" alt="skydive1">
                     <img src="..\assets\skydive2.jpg" alt="skydive2">
