--- a/Student_02/html/AB-details.html
+++ b/Student_02/html/AB-details.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../images/football-modified.png">
     <link rel="stylesheet" href="../css/AB-details.css">
     <title>Abdhulbasith</title>
 </head>
