--- a/Student_02/html/comments.html
+++ b/Student_02/html/comments.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="../images/football-modified.png">
     <link rel="stylesheet" href="../css/comments.css">
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css" />
+    <link rel="stylesheet" href="../css/navbar.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comments</title>
     <script src="../javascript/comments.js"></script>
 </head>
 <body>    
-    <!-- Header -->
     <header>
-        <!-- NavBar -->
         <nav>
-          <img src="../../Images/football.png" alt="alter" />
-          <ul>
-            <li><a href="../../Student_02/html/home.html">Home</a></li>
-            <li><a href="../../Student_02/html/comments.html" class="active">Comments</a></li>
-            <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
-            <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
-            <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
-            <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
-            <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
-          </ul>
+            <img src="../images/football-modified.png" alt="alter">
+            <ul>
+                <li><a href="home.html"> Home</a></li>
+                <li><a href="comments.html" class="active"> Comments</a></li>
+                <li><a href="Shop.html"> Shop</a></li>
+                <li><a href="quiz.html" > Quiz </a></li>
+                <li><a href="sitemap.html" > Site Map</a></li>
+                <li><a href="aboutus.html" > About Us </a></li>
+                </ul>
         </nav>
-      </header>
+    </header>
     <form id="myForm" action="" onsubmit="return validateForm()"  method ="dialog">
         <p class="subject">How Did We Do?</p>
         <div class="questionBox">
