--- a/Student_01/html/Checkout.html
+++ b/Student_01/html/Checkout.html
@@ -125,6 +125,10 @@
        
       </div>
       </div>
+
+      <div class="page-editor-button">
+        <a href="../html/page-editor-student-1.html">Page Developer Student-1 </a>
+    </div>
     <script src="../javascript/checkOut.js"></script>
 </body>
 </html>
