student 4 works done

--- a/Student_04/html/gallery.html
+++ b/Student_04/html/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="../css/gallery.css">
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
 </head>
 <body id="main">
     <section id="Navigation">
@@ -13,14 +13,17 @@
    <header>
     <!-- NavBar -->
     <nav>
-      <img src="../../Images/football.png" alt="alter" />
+      <img src="../images/football.png" alt="alter" />
+      <div id="logoHeading">
+        <p>Football Trivia</p>
+      </div>
       <ul>
         <li><a href="../../Student_02/html/home.html">Home</a></li>
         <li><a href="../../Student_02/html/comments.html">Comments</a></li>
         <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
         <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
-        <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
-        <li><a href="../../Student_04/html/gallery.html" class="active">Gallery</a></li>
+        <li><a href="sitemap.html">Site Map</a></li>
+        <li><a href="gallery.html" class="active">Gallery</a></li>
         <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
       </ul>
     </nav>
@@ -62,7 +65,7 @@
     <section id="thumbnailImages">
         <div class="cards">
             <div class="card" onmouseover="viewCard(event, 'American Football', 0)">
-                <img src="../../Images/american.jpg" alt="Description">
+                <img src="../images/american.jpg" alt="Description">
                 <h4 id="cardTitle">American Football</h4>
                 <p class="description">
                     American football is the most popular sport in the United States in terms of broadcast viewership audience. 
@@ -72,7 +75,7 @@
                 </p>
             </div>
             <div class="card" onmouseover="viewCard(event, 'Futsal', 1)">
-                <img src="../../Images/futsal.webp" alt="Description">
+                <img src="../images/futsal.webp" alt="Description">
                 <h4 id="cardTitle">Futsal</h4>
                 <p class="description">
                     Futsal is a football-based game played on a hard court like a basketball court, smaller than a football pitch, and mainly indoors. 
@@ -83,7 +86,7 @@
                 </p>
             </div>
             <div class="card" onmouseover="viewCard(event, 'Gaelic Football', 2)">
-                <img src="../../Images/gaelic.jpg" alt="Description">
+                <img src="../images/gaelic.jpg" alt="Description">
                 <h4 id="cardTitle">Gaelic Football</h4>
                 <p class="description">
                     Gaelic football (Irish: Peil Ghaelach; short name Peil, Ulster Scots: Gaelic fitbaw), commonly known as simply Gaelic, 
@@ -94,7 +97,7 @@
                 </p>
             </div>
             <div class="card" onmouseover="viewCard(event, 'Beach Soccer', 3)">
-                <img src="../../Images/beach.jpg" alt="Description">
+                <img src="../images/beach.jpg" alt="Description">
                 <h4 id="cardTitle">Beach Soccer</h4>
                 <p class="description">
                     Beach football (beasal or futebol de areia) started in Brazil, more precisely at Rio de Janeiro. 
@@ -104,7 +107,7 @@
                 </p>
             </div>
             <div class="card" onmouseover="viewCard(event, 'Street Football', 4)">
-                <img src="../../Images/street.jpg" alt="Description">
+                <img src="../images/street.jpg" alt="Description">
                 <h4 id="cardTitle">Street Football</h4>
 
                 <p class="description">
@@ -116,7 +119,7 @@
                 </p>
             </div>
             <div class="card" onmouseover="viewCard(event, 'Freestyle Football', 5)">
-                <img src="../../Images/freestyle.jpeg" alt="Description">
+                <img src="../images/freestyle.jpeg" alt="Description">
                 <h4 id="cardTitle">Freestyle Football</h4>
                 <p class="description">
                     Freestyle football is the art of juggling a football using any part of the body, excluding the elbows to the hands. 
@@ -125,7 +128,7 @@
                 </p>
             </div>
             <div class="cardView">
-                <img id="viewImage" src="../../Images/football.jpg" alt="Description">
+                <img id="viewImage" src="../images/football.jpg" alt="Description">
                 <h4 id="viewCardTitle">Football</h4>
                 <p class="cardDescription">
                     Football is a family of team sports that involve, to varying degrees, kicking a ball to score a goal. Unqualified, 
