--- a/Student_04/html/sitemap.html
+++ b/Student_04/html/sitemap.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitemap</title>
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css" />
+    <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/sitemap.css">
 </head>
 <body>
     <section>
-         <!-- Header -->
-   <header>
-    <!-- NavBar -->
-    <nav>
-      <img src="../../Images/football.png" alt="alter" />
-      <ul>
-        <li><a href="../../Student_02/html/home.html">Home</a></li>
-        <li><a href="../../Student_02/html/comments.html">Comments</a></li>
-        <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
-        <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
-        <li><a href="../../Student_04/html/sitemap.html" class="active">Site Map</a></li>
-        <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
-        <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Header -->
+    <header>
+        <!-- NavBar -->
+        <nav>
+          <img src="../images/football.png" alt="alter" />
+          <div id="logoHeading">
+            <p>Football Trivia</p>
+          </div>
+          <ul>
+            <li><a href="../../Student_02/html/home.html">Home</a></li>
+            <li><a href="../../Student_02/html/comments.html">Comments</a></li>
+            <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
+            <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
+            <li><a href="sitemap.html" class="active">Site Map</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
+          </ul>
+        </nav>
+      </header>
     </section>
 
     <section>
@@ -66,13 +69,13 @@
                     </a>
                 </g>
                 <g id="sitemap">
-                    <a href="../../Student_04/html/sitemap.html">
+                    <a href="sitemap.html">
                         <rect x="824" y="402" width="160" height="70" rx="20" ry="20"/>
                         <text x="860" y="445" text-anchor="start" xml:space="preserve">Site Map</text>
                     </a>
                 </g>
                 <g id="gallery">
-                    <a href="../../Student_04/html/gallery.html">
+                    <a href="gallery.html">
                         <rect x="1092" y="402.02791" width="160" height="70" rx="20" ry="20"/>
                         <text x="1133" y="445" text-anchor="start" xml:space="preserve">Gallery</text>
                     </a>
