--- a/Student_01/html/Shop.html
+++ b/Student_01/html/Shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports shop</title>
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css"/>
+    <link rel="stylesheet" href="../css/navbar.css"/>
     <link rel="stylesheet" href="../css/shop.css">
     <script src="https://kit.fontawesome.com/2a81a1214a.js" crossorigin="anonymous"></script>
 </head>
