--- a/Student_02/html/history.html
+++ b/Student_02/html/history.html
@@ -9,8 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Edu+SA+Beginner:wght@700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Edu+SA+Beginner:wght@700&family=Josefin+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 
 
     <!-- fonts end -->
@@ -43,11 +42,11 @@
         </p>
         
         <div class="shortcuts">
-            <div><a href="#origin">Origins of Soccer</a></div>
-            <div><a href="#evolution">Evolution of the Game</a></div>
-            <div><a href="#spread">Spread Across the World</a></div>
-            <div><a href="#international">International Competitions</a></div>
-            <div><a href="#modern">The Modern Era</a></div>
+            <a href="#origin"><div>Origins of Soccer</div></a>
+            <a href="#evolution"><div>Evolution of the Game</div></a>
+            <a href="#spread"><div>Spread Across the World</div></a>
+            <a href="#international"><div>International Competitions</div></a>
+            <a href="#modern"><div>The Modern Era</div></a>
         </div>
     </div>
 
@@ -89,14 +88,14 @@
                      including South America, Europe, and Africa, by British sailors, 
                      traders, and laborers. Local neighborhoods embraced soccer and 
                      adapted it to fit their distinct cultures and lifestyles.</p>
-                <img src="../images/football-history 1.jpg" alt="">
+                <img src="../images/worldwide spread.jpeg" alt="">
             </content>
             
         </div>
         <div id="international">
             <topic>The Rise of International Competitions</topic>
             <content>
-                <img src="../images/football-history 1.jpg" alt="">
+                <img src="../images/soccer competitions.jpg" alt="">
                 <p>International soccer competitions started to emerge in the early 20th century, 
                     bringing nations together in a spirit of friendly competition 
                     and delivering exhilarating moments. The FIFA World CupTM was 
@@ -112,7 +111,7 @@
                     thanks to the growth of club football, the expansion of international 
                     competitions, and the global reach of the sport via television and the 
                     intern</p>
-                <img src="../images/football-history 1.jpg" alt="">
+                <img src="../images/modern-soccer.jpg" alt="">
             </content>
         </div>
 
