completed student 03 tasks

--- a/Student_02/html/history.html
+++ b/Student_02/html/history.html
@@ -11,6 +11,9 @@
     <header>
         <nav>
             <img src="../images/football.png" alt="alter">
+            <div id="logoHeading">
+                <p>Football Trivia</p>         
+              </div>
             <ul>
                 <li><a href="../html/home.html">Home</a></li>
                 <li><a href="../html/comments.html">Comments</a></li>
