--- a/Student_02/html/home.html
+++ b/Student_02/html/home.html
@@ -14,6 +14,9 @@
     <!-- NavBar -->
     <nav>
       <img src="../../Images/football.png" alt="alter" />
+      <div id="logoHeading">
+        <p>Football Trivia</p>         
+      </div>
       <ul>
         <li><a href="../../Student_02/html/home.html" class="active">Home</a></li>
         <li><a href="../../Student_02/html/comments.html">Comments</a></li>
