--- a/Student_01/html/content-page-zaid.html
+++ b/Student_01/html/content-page-zaid.html
@@ -15,6 +15,9 @@
     <!-- NavBar -->
     <nav>
       <img src="../../Images/football.png" alt="alter" />
+      <div id="logoHeading">
+        <p>Football Trivia</p>         
+      </div>
       <ul>
         <li><a href="../../Student_02/html/home.html">Home</a></li>
         <li><a href="../../Student_02/html/home.html">Comments</a></li>
