--- a/Student_03/html/aboutUs.html
+++ b/Student_03/html/aboutUs.html
@@ -24,6 +24,9 @@
     <!-- NavBar -->
     <nav>
       <img src="../../Images/football.png" alt="alter" />
+      <div id="logoHeading">
+        <p>Football Trivia</p>         
+      </div>
       <ul>
         <li><a href="../../Student_02/html/home.html">Home</a></li>
         <li><a href="../../Student_02/html/home.html">Comments</a></li>
@@ -49,7 +52,7 @@
             <div class="card">
               <div class="students">
                 <img
-                  src="../../Images/zaid.jpeg"
+                  src="../Images/zaid.jpeg"
                   alt="Zaid Nilawfer"
                   data-student-id="student01"
                   data-role-id="role01"
@@ -72,7 +75,7 @@
             <div class="card">
               <div class="students">
                 <img
-                  src="../../Images/basith.jpeg"
+                  src="../Images/basith.jpeg"
                   alt="Abdhul Basith"
                   data-student-id="student02"
                   data-role-id="role02"
@@ -100,7 +103,7 @@
             <div class="card">
               <div class="students">
                 <img
-                  src="../../Images/Haseef.jpg"
+                  src="../Images/Haseef.jpg"
                   alt="Hanees Haseef"
                   data-student-id="student03"
                   data-role-id="role03"
@@ -126,7 +129,7 @@
             <div class="card">
               <div class="students">
                 <img
-                  src="../../Images/rikas.jpeg"
+                  src="../Images/rikas.jpeg"
                   alt="Rikas Haleemdeen"
                   data-student-id="student04"
                   data-role-id="role04"
@@ -146,6 +149,9 @@
           </article>
         </div>
       </section>
+      <div class="page-editor-button">
+        <a href="../html/student03.html">Page developer- student 03</a>
+      </div>
     </main>
   </body>
 </html>
