--- a/Student_04/html/contentPage.html
+++ b/Student_04/html/contentPage.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="../css/contentPage.css">
 </head>
 <body>
+    <!-- Extra content page (Teams and Clubs) -->
     <section id="top">
         <div class="navigation">
             <h1>Teams and Clubs</h1>
             <nav class="navBack">
+                <!-- back button -->
                 <a href="javascript:history.back()"><button type="button" class="backHome">Back</button></a>
             </nav>
             
@@ -23,6 +25,7 @@
             eligible to represent the club in any activity as it regards to association football competitions.</p>
     </section>
 
+    <!-- thubmnail logos with seemore with club page -->
     <section id="thumbnail">
         <h2>Most Popular Football Clubs</h2><br><br>
         <div class="container">
@@ -60,6 +63,7 @@
         </div>
     </section>
 
+    <!-- football teams -->
     <div id="below">
         <h2>Football Teams</h2>
         <p>
@@ -84,6 +88,7 @@
         </p>
     </div>
 
+    <!-- footer buttons -->
     <section id="footer">
         <div class="buttonContainer">
             <a href="pageEditor.html"><button type="button" class="editorButton">Page Editor: Rikas Ilamdeen (student 4)</button></a>
