--- a/Student_04/html/pageEditor.html
+++ b/Student_04/html/pageEditor.html
@@ -10,7 +10,7 @@
         <h1>Page Editor</h1>
     </div>
     <hr>
-
+<!-- student details -->
     <div class="editorDetails">
         <p> Name : Rikas Ilamdeen
             <br>Role : Student 4</p>
@@ -22,6 +22,7 @@
         <a href="#footer"><button type="button" class="footerButton">Jump to Bottom</button></a>
     </div>
 
+    <!-- pages with description and links -->
     <div class="contents">
         <div id="gallery">
             <h1>Gallary Page</h1>
