--- a/Student_04/html/sitemap.html
+++ b/Student_04/html/sitemap.html
@@ -11,7 +11,7 @@
     <section>
     <!-- Header -->
     <header>
-        <!-- NavBar -->
+        <!-- Navigation bar -->
         <nav>
           <img src="../images/football.png" alt="alter" />
           <div id="logoHeading">
@@ -30,6 +30,7 @@
       </header>
     </section>
 
+    <!-- Site Map -->
     <section>
         <h1 id="site">Site Map</h1>
         <div class="svg">
@@ -40,6 +41,7 @@
                         <text x="737" y="242" xml:space="preserve" text-anchor="start">Home</text>
                     </a>
                 </g>
+                <!-- SVG lines -->
                 <g id="line">
                     <line x1="770" y1="270" x2="770" y2="330"/>
                     <line x1="148" y1="331" x2="1400" y2="331"/>
@@ -50,6 +52,7 @@
                     <line x1="1172" y1="331" x2="1172" y2="401"/>
                     <line x1="1398" y1="331" x2="1398" y2="401"/>
                 </g>
+                <!-- SVG rectangles with title -->
                 <g id="comments">
                     <a href="../../Student_02/html/comments.html">
                         <rect x="70" y="402" width="160" height="70" rx="20" ry="20"/>
@@ -86,6 +89,7 @@
                         <text x="1340" y="445" text-anchor="start" xml:space="preserve">About Us</text>
                     </a>
                 </g>
+                <!-- Page Editor page link -->
                 <g id="pageEditor">
                     <a href="pageEditor.html">
                         <rect x="0" y="636" width="310" height="45"/>
