--- a/Student_01/html/Shop.html
+++ b/Student_01/html/Shop.html
@@ -14,9 +14,9 @@
     <!-- NavBar -->
     <nav>
 
-      <img src="../../Images/football.png" alt="alter" />
+      <img src="../Images/football.png" alt="alter" />
       <div id="logoHeading">
-        <p>Football Trivia</p>         
+        <p>Football Trivia</p>
       </div>
       <ul>
         <li><a href="../../Student_02/html/home.html">Home</a></li>
