--- a/Student_02/html/comments.html
+++ b/Student_02/html/comments.html
@@ -13,9 +13,9 @@
     <header>
         <!-- NavBar -->
         <nav>
-          <img src="../../Images/football.png" alt="alter" />
+          <img src="../images/football.png" alt="alter" />
           <div id="logoHeading">
-            <p>Football Trivia</p>         
+            <p>Football Trivia</p>
           </div>
           <ul>
             <li><a href="../../Student_02/html/home.html">Home</a></li>
