--- a/Student_02/html/home.html
+++ b/Student_02/html/home.html
@@ -13,9 +13,9 @@
    <header>
     <!-- NavBar -->
     <nav>
-      <img src="../../Images/football.png" alt="alter" />
+      <img src="../images/football.png" alt="alter" />
       <div id="logoHeading">
-        <p>Football Trivia</p>         
+        <p>Football Trivia</p>
       </div>
       <ul>
         <li><a href="../../Student_02/html/home.html" class="active">Home</a></li>
@@ -30,12 +30,12 @@
   </header>
     
     <div class="column">
-        <button class="option1">History</button>
-        <button class="option2">Teams and Clubs</button>
+        <a href="../html/history.html"><button class="option1">History</button></a>
+        <a href="../../Student_04/html/contentPage.html"><button class="option2">Teams and Clubs</button></a>
     </div>
     <div class="column">
-        <button class="option3">Fans and culture</button>
-        <button class="option4">Legends</button>
+        <a href="../../Student_01/html/content-page-zaid.html"><button class="option3">Fans and culture</button></a>
+        <a href="../../Student_03/html/legends.html"><button class="option4">Legends</button></a>
     </div>
 
     <footer>page by <a href="../html/AB-details.html">Abdhulbasith</a></footer>
