--- a/Student_03/html/aboutUs.html
+++ b/Student_03/html/aboutUs.html
@@ -23,9 +23,9 @@
    <header>
     <!-- NavBar -->
     <nav>
-      <img src="../../Images/football.png" alt="alter" />
+      <img src="../Images/football.png" alt="alter" />
       <div id="logoHeading">
-        <p>Football Trivia</p>         
+        <p>Football Trivia</p>
       </div>
       <ul>
         <li><a href="../../Student_02/html/home.html">Home</a></li>
@@ -130,7 +130,7 @@
               <div class="students">
                 <img
                   src="../Images/rikas.jpeg"
-                  alt="Rikas Haleemdeen"
+                  alt="Rikas Ilamdeen"
                   data-student-id="student04"
                   data-role-id="role04"
                   data-name="Rikas Ilamdeen "
@@ -139,7 +139,7 @@
                   <div class="scoial_icons">
                     <a href="https://github.com/rikas-ilamdeen" class="fa fa-github"></a>
                     <a href="#" class="fa fa-stack-overflow"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
+                    <a href="https://www.linkedin.com/in/rikas-ilamdeen" class="fa fa-linkedin"></a>
                   </div>
                   <h3 id="student04">Student Name</h3>
                   <p id="role04">Student Role</p>
