--- a/Student_03/html/quiz.html
+++ b/Student_03/html/quiz.html
@@ -16,9 +16,9 @@
     <header>
       <!-- NavBar -->
       <nav>
-        <img src="../../Images/football.png" alt="alter" />
+        <img src="../Images/football.png" alt="alter" />
         <div id="logoHeading">
-          <p>Football Trivia</p>         
+          <p>Football Trivia</p>
         </div>
         <ul>
           <li><a href="../../Student_02/html/home.html">Home</a></li>
