update 24th july

--- a/Student_02/html/AB-details.html
+++ b/Student_02/html/AB-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../images/football-modified.png">
+    <link rel="icon" type="image/x-icon" href="../images/basith.jpeg">
     <link rel="stylesheet" href="../css/AB-details.css">
     <title>Abdhulbasith</title>
 </head>
@@ -15,25 +15,24 @@
             Role: Student 2 <br>
             The following pages were edited by me <br>
         </div>
-        <a href="#"><br>jump to bottom</a>
+        <a href="AB-details.html"><br>&#8595 jump to bottom</a>
 
         <h4>Main page</h4>
-    
         <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
-        <a href="#">link to main page</a>
+        <a href="../html/home.html">link to main page</a>
 
         <h4>Navigation Bar for all pages</h4>
-        <a href="#">link to main page (with navbar)</a>
+        <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
+        <a href="../html/home.html">link to main page (with navbar)</a>
 
         <h4>Comments Form</h4>
-        <a href="#">Link to Comments</a>
+        <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
+        <a href="../html/comments.html">Link to Comments section</a>
 
         <h4>History of football - content page</h4>
-        <a href="#">link to "History of football"</a>
+        <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
+        <a href="../html/history.html">link to "History of football"</a>
 
-        <h4>page editor</h4>
-        
-        <h4>Main page</h4>
     </div>
    
 </body>
