--- a/Student_02/html/AB-details.html
+++ b/Student_02/html/AB-details.html
@@ -15,22 +15,22 @@
             Role: Student 2 <br>
             The following pages were edited by me <br>
         </div>
-        <a href="AB-details.html"><br>&#8595 jump to bottom</a>
+        <a href="#bottom"><br>&#8595 jump to bottom</a>
 
         <h4>Main page</h4>
         <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
         <a href="../html/home.html">link to main page</a>
 
         <h4>Navigation Bar for all pages</h4>
-        <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
+        <p>created a navigation bar for all pages which <br>contains the link to all others' pages and the <br>website logo</p>
         <a href="../html/home.html">link to main page (with navbar)</a>
 
         <h4>Comments Form</h4>
-        <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
+        <p>created a comment page where the user is able to give <br>feedback on their experience with our website <br>using radio buttons, text areas, text fields</p>
         <a href="../html/comments.html">Link to Comments section</a>
 
-        <h4>History of football - content page</h4>
-        <p>created a home page HTML & CSS containing <br> four options leading to four <br> different aspects on football</p>
+        <h4 id="bottom">History of football - content page</h4>
+        <p>a content page containing some factson  the brief history of football </p>
         <a href="../html/history.html">link to "History of football"</a>
 
     </div>
