--- a/Student_02/html/home.html
+++ b/Student_02/html/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="../images/football-modified.png">
+    <link rel="icon" type="image/x-icon" href="../images/soccer network.png">
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <meta charset="UTF-8">
@@ -19,9 +19,9 @@
     <header>
         <nav>
             <img src="../images/football-modified.png" alt="alter">
-            <!-- <div id="logoHeading">
+            <div id="logoHeading">
                 <p>Football Trivia</p>
-            </div> -->
+            </div>
             <ul>
                 <li><a href="home.html" class="active" > Home</a></li>
                 <li><a href="comments.html" > Comments</a></li>
