--- a/Student_03/html/aboutUs.html
+++ b/Student_03/html/aboutUs.html
@@ -8,7 +8,7 @@
     <!-- This links to an external style sheet for the About Us page -->
     <link rel="stylesheet" href="../css/AboutUs.css" />
     <!-- This links to an external style sheet for the navigation bar -->
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
     <!-- This links to an external style sheet for font awesome icons -->
     <link
       rel="stylesheet"
