--- a/Student_03/html/legends.html
+++ b/Student_03/html/legends.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/legends.css" />
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
     <title>Legends of Football</title>
   </head>
   <body>
