--- a/Student_03/html/quiz.html
+++ b/Student_03/html/quiz.html
@@ -7,7 +7,7 @@
     <!-- This links to an external style sheet for the Quiz page -->
     <link rel="stylesheet" href="../css/quiz.css" />
     <!-- This links to an external style sheet for the navigation bar -->
-    <link rel="stylesheet" href="../../Student_02/css/navbar.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
     <!-- This links to an external script file for the Quiz page -->
     <script src="../Javascript/quiz.js"></script>
   </head>
