--- a/Student_03/html/student03.html
+++ b/Student_03/html/student03.html
@@ -17,7 +17,7 @@
     <hr />
     <main>
       <section>
-        <a href="">Go to bottom of the page</a>
+        <a href="#bottom">Go to bottom of the page</a>
         <h4>Quiz page</h4>
         <p>
           The Quiz page, I created an interactive quiz that displays one
@@ -50,13 +50,13 @@
         <a href="../html/legends.html">Go to Legends of football page</a>
       </section>
       <section>
-        <h4>Main page</h4>
+        <h4 id="bottom">Main page</h4>
         <p>
           We used gihub as our collabarative tool to crete our website project.
           I worked on connecting all the HTML,css nad javascript of all the page
           and navigation for a proper fuctionallity.
         </p>
-        <a href="../../Student_02/html/main">Go to main page</a>
+        <a href="../../Student_02/html/home.html">Go to main page</a>
       </section>
     </main>
     <div class="backto-top-button">
