--- a/Student_04/html/contentPage.html
+++ b/Student_04/html/contentPage.html
@@ -5,17 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teams and Clubs</title>
     <link rel="stylesheet" href="../css/contentPage.css">
+    <link rel="stylesheet" href="../css/navbar.css">
 </head>
 <body>
+    <header>
+        <!-- Navigation bar -->
+         <!-- NavBar -->
+         <nav>
+            <img src="../images/football.png" alt="alter" />
+            <div id="logoHeading">
+              <p>Football Trivia</p>
+            </div>
+            <ul>
+              <li><a href="../../Student_02/html/home.html">Home</a></li>
+              <li><a href="../../Student_02/html/comments.html">Comments</a></li>
+              <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
+              <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
+              <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
+              <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
+              <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
+              <div class="dropdown">
+                <li><a href="#" class="active">More</a></li>
+                <div class="dropdown-content">
+                  <a href="../../Student_02/html/history.html">History</a>
+                  <a href="../../Student_04/html/contentPage.html">Teams and clubs</a>
+                  <a href="../../Student_01/html/content-page-zaid.html">Fans and culture</a>
+                  <a href="../../Student_03/html/legends.html">Legends</a>
+                </div>
+              </div>
+            </ul>
+          </nav>
+       </header>
     <!-- Extra content page (Teams and Clubs) -->
     <section id="top">
         <div class="navigation">
-            <h1>Teams and Clubs</h1>
-            <nav class="navBack">
-                <!-- back button -->
-                <a href="javascript:history.back()"><button type="button" class="backHome">Back</button></a>
-            </nav>
-            
+            <h1>Teams and Clubs</h1> 
         </div>
         <p>In association football, a football club (or association football club, alternatively soccer club) is a sports club that acts as an entity through 
             which association football teams organise their sporting activities. The club can exist either as an independent unit or 
