--- a/Student_01/html/content-page-zaid.html
+++ b/Student_01/html/content-page-zaid.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/content-page-zaid.css">
+    <link rel="stylesheet" href="../css/navbar.css">
     <title>Fans and Culture</title>
 </head>
 
 <body>
-    <!-- End Nav Bar -->
+    <section>
+        <header>
+            <nav>
+                <img src="../images/football.png" alt="alter" />
+                <div id="logoHeading">
+                  <p>Football Trivia</p>
+                </div>
+                <ul>
+                  <li><a href="../../Student_02/html/home.html">Home</a></li>
+                  <li><a href="../../Student_02/html/comments.html">Comments</a></li>
+                  <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
+                  <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
+                  <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
+                  <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
+                  <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
+                  <div class="dropdown">
+                    <li><a href="#" class="active">More</a></li>
+                    <div class="dropdown-content">
+                      <a href="../../Student_02/html/history.html">History</a>
+                      <a href="../../Student_04/html/contentPage.html">Teams and clubs</a>
+                      <a href="../../Student_01/html/content-page-zaid.html">Fans and culture</a>
+                      <a href="../../Student_03/html/legends.html">Legends</a>
+                    </div>
+                  </div>
+                </ul>
+              </nav>
+        </header>
+    </section>
     <!-- Start Hero -->
 
         <section class="hero">
