--- a/Student_02/html/history.html
+++ b/Student_02/html/history.html
@@ -17,20 +17,31 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="../images/football.png" alt="alter">
-            <div id="logoHeading">
-                <p>Football Trivia</p>
-              </div>
-            <ul>
-                <li><a href="home.html" class="active" > Home</a></li>
-                <li><a href="comments.html" > Comments</a></li>
-                <li><a href="Shop.html" > Shop</a></li>
-                <li><a href="quiz.html" > Quiz </a></li>
-                <li><a href="siteMap.html" > Site Map</a></li>
-                <li><a href="aboutUs.html" > About Us </a></li>
-            </ul>
-        </nav>
+        <!-- NavBar -->
+    <nav>
+        <img src="../images/football.png" alt="alter" />
+        <div id="logoHeading">
+          <p>Football Trivia</p>
+        </div>
+        <ul>
+          <li><a href="../../Student_02/html/home.html">Home</a></li>
+          <li><a href="../../Student_02/html/comments.html">Comments</a></li>
+          <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
+          <li><a href="../../Student_03/html/quiz.html">Quiz</a></li>
+          <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
+          <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
+          <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
+          <div class="dropdown">
+            <li><a href="#" class="active">More</a></li>
+            <div class="dropdown-content">
+              <a href="../../Student_02/html/history.html">History</a>
+              <a href="../../Student_04/html/contentPage.html">Teams and clubs</a>
+              <a href="../../Student_01/html/content-page-zaid.html">Fans and culture</a>
+              <a href="../../Student_03/html/legends.html">Legends</a>
+            </div>
+          </div>
+        </ul>
+      </nav>
     </header>
 
     <div class="hat" id="top">
