--- a/Student_03/html/quiz.html
+++ b/Student_03/html/quiz.html
@@ -14,24 +14,31 @@
   <body>
     <!-- Header -->
     <header>
-      <!-- NavBar -->
-      <nav>
-        <img src="../Images/football.png" alt="alter" />
-        <div id="logoHeading">
-          <p>Football Trivia</p>
+       <!-- NavBar -->
+    <nav>
+      <img src="../images/football.png" alt="alter" />
+      <div id="logoHeading">
+        <p>Football Trivia</p>
+      </div>
+      <ul>
+        <li><a href="../../Student_02/html/home.html">Home</a></li>
+        <li><a href="../../Student_02/html/comments.html">Comments</a></li>
+        <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
+        <li><a href="../../Student_03/html/quiz.html" class="active">Quiz</a></li>
+        <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
+        <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
+        <li><a href="../../Student_03/html/aboutUs.html" >About Us</a></li>
+        <div class="dropdown">
+          <li><a href="#">More</a></li>
+          <div class="dropdown-content">
+            <a href="../../Student_02/html/history.html">History</a>
+            <a href="../../Student_04/html/contentPage.html">Teams and clubs</a>
+            <a href="../../Student_01/html/content-page-zaid.html">Fans and culture</a>
+            <a href="../../Student_03/html/legends.html">Legends</a>
+          </div>
         </div>
-        <ul>
-          <li><a href="../../Student_02/html/home.html">Home</a></li>
-          <li><a href="../../Student_02/html/home.html">Comments</a></li>
-          <li><a href="../../Student_01/html/Shop.html">Shop</a></li>
-          <li>
-            <a href="../../Student_03/html/quiz.html" class="active">Quiz</a>
-          </li>
-          <li><a href="../../Student_04/html/sitemap.html">Site Map</a></li>
-          <li><a href="../../Student_04/html/gallery.html">Gallery</a></li>
-          <li><a href="../../Student_03/html/aboutUs.html">About Us</a></li>
-        </ul>
-      </nav>
+      </ul>
+    </nav>
     </header>
     <!-- Main section -->
     <main>
