--- a/Student_03/html/aboutUs.html
+++ b/Student_03/html/aboutUs.html
@@ -6,7 +6,7 @@
     <title>About Us</title>
 
     <!-- This links to an external style sheet for the About Us page -->
-    <link rel="stylesheet" href="../css/AboutUs.css" />
+    <link rel="stylesheet" href="../css/aboutUs.css" />
     <!-- This links to an external style sheet for the navigation bar -->
     <link rel="stylesheet" href="../css/navbar.css" />
     <!-- This links to an external style sheet for font awesome icons -->
