--- a/Student_03/html/aboutUs.html
+++ b/Student_03/html/aboutUs.html
@@ -23,7 +23,7 @@
    <header>
      <!-- NavBar -->
      <nav>
-      <img src="../images/football.png" alt="alter" />
+      <img src="../Images/football.png" alt="alter" />
       <div id="logoHeading">
         <p>Football Trivia</p>
       </div>
